Added empty view to client list

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello">Hello World, MobileBankActivity!</string>
     <string name="app_name">MobileBank</string>
 
+    <string name="no_client">Ooooops\nNo downloaded clients</string>
+
 </resources>
