--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello">Hello World, MobileBankActivity!</string>
     <string name="app_name">MobileBank</string>
 
-    <string name="no_client">Ooooops\nNo downloaded clients</string>
-    <string name="no_transactions">Ooooops\nNo Transactions</string>
+    <string name="no_client">No downloaded clients</string>
+    <string name="no_transactions">No Transactions</string>
 
 </resources>
